k8s/mqtt-broker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto-broker
  namespace: gridops-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2.0
        ports:
        - containerPort: 1883
        volumeMounts:
        - name: config
          mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: mosquitto-config
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
  namespace: gridops-edge
spec:
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
  - port: 1883
    targetPort: 1883
